# generic-user-service

./: .pre-commit-config.yaml  .pylintrc  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: def4e6248021_add_initial_models.py
app/models/: __init__.py  group.py  relationships.py  role.py  user.py
app/repositories/: base_repo.py  group_repo.py  role_repo.py  user_repo.py
app/schemas/: user.py
