[project]
name = "generic-user-service"
version = "0.1.0"
description = "Generic user service for authn and authz"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "litestar[standard]>=2.16.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
]
